add survey type

--- a/ego-network.ipynb
+++ b/ego-network.ipynb
@@ -113,11 +113,11 @@
     "collapsed": true
    },
    "source": [
-    "Overall tips\n",
+    "## Overall tips\n",
     "* Qualtrics loads everything on a page together. It usually works fine, but sometimes multiple questions may be displayed to participants on one single page. Issues arise when a question needs to retrive a piece of data, but the question that encodes this specific piece of data is on the same page. A solution is to add page breaks between these questions.\n",
     "* If you want to store a few variables, you need to first add them to \"set embedded data\" in survey flow before defining them in javascript. \n",
     "\n",
-    "Survey overview\n",
+    "## Survey overview\n",
     "* The survey below has four conditions. Participants are randomly selected into one of these four conditions.\n",
     "* First name generator question: Participants are first given 10 blanks to fill in names. They do not need to fill in all of them. The number of names they generate in this stage is encoded in `nameGen1`. The exact names they generate are encoded in `name1`, `name2`, ... `name10` in sequence.\n",
     "* Second name generator question: Afterwards, participants are given all the names they have generated in the previous section, and asked to come up with additional names if they can. In this section, they are given a textbox, and instructed to type in additional names in the format of \"name1, name2, name3, ...\". Javascript code embedded in the question will parse the string by \",\", and trim all additional white spaces. The number of names generated in this stage is encded in `nameGen2`. And the exact names participantes generate are encoded in `namep1`, `namep2`, ..., `namep10`. Only the first 10 names are encoded.\n",
@@ -130,7 +130,13 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Embed the following code in the first name generator question."
+    "1. Javascript for name generator question. \n",
+    "\n",
+    "    * Question type: text entry -> form \n",
+    "\n",
+    "    * Embed the following code in the first name generator question. \n",
+    "\n",
+    "![Example: name generator question](image/Q1.jpeg)"
    ]
   },
   {
@@ -138,7 +144,6 @@
    "metadata": {},
    "source": [
     "```javascript\n",
-    "\n",
     "Qualtrics.SurveyEngine.addOnload(function()\n",
     "{\n",
     "\t/*Place your JavaScript here to run when the page loads*/\n",
@@ -183,7 +188,14 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Embed the following code in a new question after the second name generator question. Make sure this new question does not appear on the same page as the second name generator question."
+    "2. Javascript for second name generator question (prompt for additional names). \n",
+    "\n",
+    "    * Question type: text entry.\n",
+    "\n",
+    "    * How-tos: Embed the following code in a new question after the second name generator question. Make sure this new question does not appear on the same page as the second name generator question.\n",
+    "    \n",
+    "![Example: additional_name_question1](image/Q2.jpeg)\n",
+    "![Example: additional_name_question2](image/Q3.jpeg)"
    ]
   },
   {
@@ -191,7 +203,6 @@
    "metadata": {},
    "source": [
     "```javascript\n",
-    "\n",
     "Qualtrics.SurveyEngine.addOnload(function()\n",
     "{\n",
     "\t/*Place your JavaScript here to run when the page loads*/\n",
@@ -234,11 +245,9 @@
     "\n",
     "Qualtrics.SurveyEngine.addOnUnload(function()\n",
     "{\n",
-    "\t/*Place your JavaScript here to run when the page is unloaded*/\n",
-    "\t\n",
+    "\t/*Place your JavaScript here to run when the page is unloaded*/\t\n",
     "\n",
     "});\n",
-    "\n",
     "```"
    ]
   },
@@ -246,17 +255,18 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Embed the following code in the name interpreter matrix."
+    "3. Javascript for ego tie relations\n",
+    "    * Question type: matrix table -> text entry, short\n",
+    "    * Example: types of ego ties\n",
+    "\n",
+    "![Example: ego_tie](image/Q5.jpeg)"
    ]
   },
   {
    "cell_type": "markdown",
-   "metadata": {
-    "collapsed": true
-   },
+   "metadata": {},
    "source": [
     "```javascript\n",
-    "\n",
     "Qualtrics.SurveyEngine.addOnload(function()\n",
     "{\n",
     "\t/*Place your JavaScript here to run when the page loads*/\n",
@@ -277,6 +287,79 @@
     "\t\n",
     "\tvar nameGen1 = Qualtrics.SurveyEngine.getEmbeddedData('nameGen1');\n",
     "\tvar nameGen2 = Qualtrics.SurveyEngine.getEmbeddedData('nameGen2');\n",
+    "\t// make sure nameGen1 and nameGen2 should be set as number type in Survey Flow\n",
+    "\tfor (var i = 0; i < nameGen1; i++){\n",
+    "\t\tvar nameID = 'name'+(i+1);\n",
+    "\t\tvar name = Qualtrics.SurveyEngine.getEmbeddedData(nameID);\n",
+    "\t\t\n",
+    "\t\t//$$('table.ChoiceStructure thead')[0].select('th')[i].update(name);\n",
+    "\t\t$$('table.ChoiceStructure tbody')[0].select('th')[i].update(name);\n",
+    "\t};\n",
+    "\t\n",
+    "\tfor (var i =  0; i <  nameGen2; i++){\n",
+    "\t\tvar nameID = 'name_p'+(i+1);\n",
+    "\t\tvar name = Qualtrics.SurveyEngine.getEmbeddedData(nameID);\n",
+    "\t\tvar seq = Number(i)+Number(nameGen1);\n",
+    "\t\t\n",
+    "\t\t//$$('table.ChoiceStructure thead')[0].select('th')[seq].update(name)\n",
+    "\t\t$$('table.ChoiceStructure tbody')[0].select('th')[seq].update(name)\n",
+    "\t\t\n",
+    "\t};\n",
+    "\n",
+    "\tvar nameSum = Number(nameGen1) + Number(nameGen2);\n",
+    "\tfor (var i = nameSum; i < 15; i++){\n",
+    "\t\t$$('table.ChoiceStructure tbody')[0].select('td')[i].down().value = \"x\";\n",
+    "\t};\n",
+    "\t\n",
+    "});\n",
+    "\n",
+    "Qualtrics.SurveyEngine.addOnUnload(function()\n",
+    "{\n",
+    "\t/*Place your JavaScript here to run when the page is unloaded*/\n",
+    "});\n",
+    "```"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "4. Javascript for alter-alter relations\n",
+    "\n",
+    "    * Question type: matrix table -> text entry, short\n",
+    "    * Example: strength of alter-alter relations\n",
+    "\n",
+    "![Example: alter_relations](image/Q4.jpeg)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {
+    "collapsed": true
+   },
+   "source": [
+    "```javascript\n",
+    "Qualtrics.SurveyEngine.addOnload(function()\n",
+    "{\n",
+    "\t/*Place your JavaScript here to run when the page loads*/\n",
+    "\t//http...&Q_JFE=0\n",
+    "\t\n",
+    "\tvar jfe = false;\n",
+    "    if(window.location.pathname.match(/^\\/jfe/)) jfe = true;\n",
+    "\n",
+    "\t//console.log($(this.questionId).down('.Answers').down('th').innerHTML)\n",
+    "\tconsole.log(jfe);\t\n",
+    "\n",
+    "\n",
+    "});\n",
+    "\n",
+    "Qualtrics.SurveyEngine.addOnReady(function()\n",
+    "{\n",
+    "\t/*Place your JavaScript here to run when the page is fully displayed*/\n",
+    "\t\n",
+    "\tvar nameGen1 = Qualtrics.SurveyEngine.getEmbeddedData('nameGen1');\n",
+    "\tvar nameGen2 = Qualtrics.SurveyEngine.getEmbeddedData('nameGen2');\n",
+    "    var nrow = 15;\n",
     "\t// make sure nameGen1 and nameGen2 are set as number type in Survey Flow\n",
     "\tfor (var i = 0; i < nameGen1; i++){\n",
     "\t\tvar nameID = 'name'+(i+1);\n",
@@ -297,7 +380,7 @@
     "\t};\n",
     "\t\n",
     "\tvar nameSum = Number(nameGen1) + Number(nameGen2);\n",
-    "\tfor (var i = 15*nameSum; i < 224; i++){\n",
+    "\tfor (var i = nrow*nameSum; i < nrow*nrow; i++){\n",
     "\t\t$$('table.ChoiceStructure tbody')[0].select('td')[i].down().value = \"x\";\n",
     "\t};\n",
     "\t\n",
@@ -311,25 +394,71 @@
     "\n",
     "```"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "5. Javascript for surveys\n",
+    "\n",
+    "    * Question type: matrix table - Likert, single answer\n",
+    "\n",
+    "    * Example: energy question\n",
+    "   \n",
+    "![Energy question](image/4survey.jpeg)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "```javascript\n",
+    "Qualtrics.SurveyEngine.addOnload(function()\n",
+    "{\n",
+    "\t/*Place your JavaScript here to run when the page loads*/\n",
+    "\n",
+    "});\n",
+    "\n",
+    "Qualtrics.SurveyEngine.addOnReady(function()\n",
+    "{\n",
+    "\t/*Place your JavaScript here to run when the page is fully displayed*/\n",
+    "\tvar nameGen1 = Qualtrics.SurveyEngine.getEmbeddedData('nameGen');\n",
+    "\tconsole.log(nameGen);\n",
+    "\tfor (var i = 0; i < nameGen1; i++){\n",
+    "\t\tvar nameID = 'name'+(i+1);\n",
+    "\t\tvar name = Qualtrics.SurveyEngine.getEmbeddedData(nameID);\n",
+    "\t\tvar rowID = \"header~QID91~\" + (i+1); # adjust QID according to the survey\n",
+    "\t\tconsole.log(rowID);\t\t\n",
+    "\t\t$(rowID).select('span')[1].update(name);\n",
+    "\t};\n",
+    "});\n",
+    "\n",
+    "Qualtrics.SurveyEngine.addOnUnload(function()\n",
+    "{\n",
+    "\t/*Place your JavaScript here to run when the page is unloaded*/\n",
+    "});\n",
+    "\n",
+    "```"
+   ]
   }
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 2",
+   "display_name": "Python 3",
    "language": "python",
-   "name": "python2"
+   "name": "python3"
   },
   "language_info": {
    "codemirror_mode": {
     "name": "ipython",
-    "version": 2
+    "version": 3
    },
    "file_extension": ".py",
    "mimetype": "text/x-python",
    "name": "python",
    "nbconvert_exporter": "python",
-   "pygments_lexer": "ipython2",
-   "version": "2.7.13"
+   "pygments_lexer": "ipython3",
+   "version": "3.6.6"
   }
  },
  "nbformat": 4,
