--- a/ego-network.ipynb
+++ b/ego-network.ipynb
@@ -130,7 +130,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "1. Javascript for name generator question. \n",
+    "### 1. Javascript for name generator question. \n",
     "\n",
     "    * Question type: text entry -> form \n",
     "\n",
@@ -188,7 +188,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "2. Javascript for second name generator question (prompt for additional names). \n",
+    "### 2. Javascript for second name generator question (prompt for additional names). \n",
     "\n",
     "    * Question type: text entry.\n",
     "\n",
@@ -255,7 +255,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "3. Javascript for ego tie relations\n",
+    "### 3. Javascript for ego tie relations\n",
     "    * Question type: matrix table -> text entry, short\n",
     "    * Example: types of ego ties\n",
     "\n",
@@ -324,7 +324,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "4. Javascript for alter-alter relations\n",
+    "### 4. Javascript for alter-alter relations\n",
     "\n",
     "    * Question type: matrix table -> text entry, short\n",
     "    * Example: strength of alter-alter relations\n",
@@ -399,7 +399,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "5. Javascript for surveys\n",
+    "### 5. Javascript for Likert surveys\n",
     "\n",
     "    * Question type: matrix table - Likert, single answer\n",
     "\n",
